fix: arrow width bug on iphone

--- a/css/pages/_front-page.scss
+++ b/css/pages/_front-page.scss
@@ -193,6 +193,7 @@
                 
                 .glider-next {
                     left: 50px;
+                    max-width: 25px;
                 }
 
             }
